objects/kugo2p__KugamonSetting__c.object
<CustomObject>
    <description>Kugamon - Main object that controls Kugamon application behavior. Only one Kugamon Settings record is allowed. For Admin use only.</description>
    <fields>
        <fullName>kuga_sub__AllowMultipleActiveContracts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows Accounts to have multiple active Contracts.</description>
        <inlineHelpText>Allows Accounts to have multiple active Contracts.</inlineHelpText>
        <label>Allow Multiple Active Contracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kuga_sub__AutoActivateContract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables auto activation of the Contract upon Creation.</description>
        <inlineHelpText>Enables auto activation of the Contract upon Creation.</inlineHelpText>
        <label>Auto-Activate Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kuga_sub__ContractRenewalEmailTemplateName__c</fullName>
        <description>Designated Contract Renewal Email Template Name.

Enabling Automated Contract Renewal Notifications requires: (1) Assign Renewal Email Template, (2) Effective Contract, (3) Enabling Contract Renewal Scheduled Job Daily, and (4) Set Contract &quot;Auto Email Renewal Notice&quot; = True.

Sample Email Template found in Kugamon Email Templates folder.</description>
        <inlineHelpText>Enabling Automated Contract Renewal Notifications requires: (1) Assign Renewal Email Template, (2) Effective Contract, (3) Enabling Contract Renewal Scheduled Job Daily, and (4) Set Contract &quot;Auto Email Renewal Notice&quot; = True.</inlineHelpText>
        <label>Contract Renewal Email Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kuga_sub__ContractRenewalNoticeDaysBeforeSent__c</fullName>
        <defaultValue>90</defaultValue>
        <description>Number of days before the &quot;Contract Renewal Notice&quot; is Sent prior to the Renewal Date. Value used for &quot;Contract Renewal Notice Date&quot; on Contract. Blank value = 0 Days.</description>
        <inlineHelpText>Number of days before the &quot;Contract Renewal Notice&quot; is Sent prior to the Renewal Date. Value used for &quot;Contract Renewal Notice Date&quot; on Contract. Blank value = 0 Days.</inlineHelpText>
        <label>Contract Renewal Notice Days Before Sent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kuga_sub__ExpansionOpportunityStage__c</fullName>
        <defaultValue>&quot;Proposal/Price Quote&quot;</defaultValue>
        <description>Default Stage Name used for Generated Expansion Opportunity.</description>
        <inlineHelpText>Default Stage Name used for Generated Expansion Opportunity.</inlineHelpText>
        <label>Expansion Opportunity Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kuga_sub__ExtendContractonRenewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default behavior is to Create a New Contract when Renewal Order is processed. If Checked, the Existing Contract is Extended when Renewal Order is processed.</description>
        <inlineHelpText>Default behavior is to Create a New Contract when Renewal Order is processed. If Checked, the Existing Contract is Extended when Renewal Order is processed.</inlineHelpText>
        <label>Extend Contract on Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kuga_sub__InitiateOrderSubscriptionManagement__c</fullName>
        <description>Enables the generation of related Contract, Asset, Subscription, and Renewal Opportunity on Order Approved and/or Release status.</description>
        <inlineHelpText>Enables the generation of related Contract, Asset, Subscription, and Renewal Opportunity on Order Approved and/or Release status.</inlineHelpText>
        <label>Initiate Order Subscription Management</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approve/Release</fullName>
                </value>
                <value>
                    <fullName>Release</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kuga_sub__RenewalOpportunityStage__c</fullName>
        <defaultValue>&quot;Proposal/Price Quote&quot;</defaultValue>
        <description>Default Stage Name used for Generated Renewal Opportunity.</description>
        <inlineHelpText>Default Stage Name used for Generated Renewal Opportunity.</inlineHelpText>
        <label>Renewal Opportunity Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kuga_sub__RenewalOrderDaysBeforeCreate__c</fullName>
        <defaultValue>30</defaultValue>
        <description>Number of days before the &quot;Renewal Order&quot; is Created prior to the Renewal Date.Value used for &quot;Renewal Order Auto-Create Date&quot; on Renewal Opportunity. Blank value = 0 Days.</description>
        <inlineHelpText>Number of days before the &quot;Renewal Order&quot; is Created prior to the Renewal Date.Value used for &quot;Renewal Order Auto-Create Date&quot; on Renewal Opportunity. Blank value = 0 Days.</inlineHelpText>
        <label>Renewal Order Days Before Create</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kuga_sub__RenewalOrderEmailTemplateName__c</fullName>
        <defaultValue>&quot;KugamonRenewalOrderEmailTemplate&quot;</defaultValue>
        <description>Default Renewal Order Email Template Name, which will be used to sent Renewal Order Notification.

Enabling Renewal Order Email requires: (1) Assign Renewal Order Email Template, (2) Set Renewal Opportunity &quot;Renewal Order Auto Creation Date&quot;, (3) Enabling Renewal Order Scheduled Job Daily, and (4) Set Renewal Opportunity &quot;Auto Email Renewal Order&quot; = True.

Sample Email Template found in Kugamon Email Templates folder.</description>
        <inlineHelpText>Enabling Renewal Order Email requires: (1) Assign Renewal Order Email Template, (2) Set Renewal Opportunity &quot;Renewal Order Auto Creation Date&quot;, (3) Enabling Renewal Order Scheduled Job Daily, and (4) Check Renewal Opportunity &quot;Auto Email Renewal Order&quot;</inlineHelpText>
        <label>Renewal Order Email Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kuga_sub__RenewalPriceUpliftPercent__c</fullName>
        <description>Default value for the Renewal Price Uplift Percent field in Additional Account Info.

The function works if Uplift Renewal Price Percent is Checked on the Product, then the Opportunity Product Sales Price is automatically adjusted based on Renewal Price Uplift Percent.</description>
        <inlineHelpText>Default value for the Renewal Price Uplift Percent field in Additional Account Info.</inlineHelpText>
        <label>Renewal Price Uplift Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>kugo2p__ABANumber__c</fullName>
        <label>ABA Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ACName__c</fullName>
        <label>A/C Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ACNumber__c</fullName>
        <label>A/C Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__AccountingGroup__c</fullName>
        <label>Accounting Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Sale</fullName>
                </value>
                <value>
                    <fullName>Consumer Sale</fullName>
                </value>
                <value>
                    <fullName>Internal Sale</fullName>
                </value>
                <value>
                    <fullName>Reseller Sale</fullName>
                </value>
                <value>
                    <fullName>Partner Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Admin_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Administrator User, who is the designated User to receive important application notifications and error messages.</description>
        <inlineHelpText>Lookup to the Administrator User, who is the designated User to receive important application notifications and error messages.</inlineHelpText>
        <label>Administrator User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Kugamon_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__AllowOverrideServiceDateUpdate__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>This advanced option allows an override of the automatic Date updates of the Quote and Order Service Lines. Consult with a Kugamon Administrator before making any changes.</inlineHelpText>
        <label>Allow Override Service Date Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__AllowZeroUnitPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This function is deprecated</description>
        <inlineHelpText>This function is deprecated</inlineHelpText>
        <label>Deprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__AutoCancelOrder__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Orders with Draft or Sent Status changed to Cancelled when associated Opportunity Stage set to Closed/Lost stage type. Orders with other Statuses not affected</description>
        <inlineHelpText>Orders with Draft or Sent Status changed to Cancelled when associated Opportunity Stage set to Closed/Lost stage type. Orders with other Statuses not affected</inlineHelpText>
        <label>Auto-Cancel Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__AutoClosedLostQuote__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Quotes with Draft or Sent Status changed to Closed/Lost when associated Opportunity Stage set to Closed/Lost stage type. Quotes with other Statuses not affected</description>
        <inlineHelpText>Quotes with Draft or Sent Status changed to Closed/Lost when associated Opportunity Stage set to Closed/Lost stage type. Quotes with other Statuses not affected</inlineHelpText>
        <label>Auto-Closed/Lost Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__AutoReleaseOrder__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto-Release Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__BankName__c</fullName>
        <label>Bank Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__BillingMethod__c</fullName>
        <label>Billing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Email and Print</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier</label>
        <referenceTo>kugo2p__Carrier__c</referenceTo>
        <relationshipLabel>Kugamon Settings</relationshipLabel>
        <relationshipName>Kugamon_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__CheckoutTermsConditions__c</fullName>
        <inlineHelpText>Terms displayed on Online Checkout page, which is accessible either Online Order or Online Invoice</inlineHelpText>
        <label>Checkout Terms &amp; Conditions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__CompanyTextandTerms__c</fullName>
        <label>Company Terms &amp; Conditions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__CreditTerms__c</fullName>
        <label>Credit Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Check Required</fullName>
                </value>
                <value>
                    <fullName>On Credit Hold</fullName>
                </value>
                <value>
                    <fullName>No Credit Check Required</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__DateAvailabletoPromiseBasis__c</fullName>
        <inlineHelpText>Blank value defaults to Latest of Today or Date Required

For Historical Invoice Creation, Set Value to Date Required</inlineHelpText>
        <label>Date Available to Promise Basis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Date Required</fullName>
                    <default>true</default>
                    <label>Date Required</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__DayofRevenueRecognition__c</fullName>
        <inlineHelpText>Select the day of the month your company recognize revenue.</inlineHelpText>
        <label>Day of Revenue Recognition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__DaysTillPaymentDue__c</fullName>
        <inlineHelpText>Default value for payment due date calculation; should match the Payment Terms value. Days Till Payment Due value is the default for the Additional Account Info object.</inlineHelpText>
        <label>Days Till Payment Due</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__DefaultInvoiceSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Invoice Schedule</label>
        <referenceTo>kugo2p__InvoiceSchedule__c</referenceTo>
        <relationshipLabel>Kugamon Settings</relationshipLabel>
        <relationshipName>Kugamon_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__DefaulteCommerceShippingCharge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default eCommerce Shipping Charge</label>
        <referenceTo>kugo2p__AdditionalChargeCredit__c</referenceTo>
        <relationshipLabel>Kugamon Settings</relationshipLabel>
        <relationshipName>Kugamon_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__DefaulteCommerceTaxCharge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default eCommerce Tax Charge</label>
        <referenceTo>kugo2p__AdditionalChargeCredit__c</referenceTo>
        <relationshipLabel>Kugamon Settings (Default eCommerce Tax Charge)</relationshipLabel>
        <relationshipName>Kugamon_Settings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__DeliveryTerms__c</fullName>
        <label>Delivery Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FOB Destination</fullName>
                </value>
                <value>
                    <fullName>FOB Origin</fullName>
                    <default>true</default>
                    <label>FOB Origin</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__EnableDocumentVersioning__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enable Versioning to Attach PDF function for Quotes, Orders, and Invoices</inlineHelpText>
        <label>Enable Document Versioning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__FirstInvoiceDateBasis__c</fullName>
        <inlineHelpText>Blank value defaults to Order Release Date or Order Date Available to Promise, if Later. If filled, Shipment Date based on Product Line Date Available to Promise.

For Historical Invoice Creation, Set Value to Date Required or Date Available to Promise</inlineHelpText>
        <label>Invoice Date Basis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Order Date Required</fullName>
                    <default>true</default>
                    <label>Order Date Required</label>
                </value>
                <value>
                    <fullName>Order Date Available to Promise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Hide_Ship_To_on_Quote_Order_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Hide Ship To on Quote &amp; Order PDFs and Online Order</inlineHelpText>
        <label>Hide Ship To on Quote/Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__Hide_Shipment_Information_on_Invoice_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Hide Shipment Information on Invoice PDF and Online Invoice</inlineHelpText>
        <label>Hide Shipment Information on Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__InvoiceTextandTerms__c</fullName>
        <inlineHelpText>Changes to text are automatically updated in Invoice text and term section in Unsent status. If the Invoice text is different, then that text will not be updated.</inlineHelpText>
        <label>Invoice Terms &amp; Conditions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__ListPriceColumnonPDF__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Displays List Price Column on Quote &amp; Order PDFs and Online Order</inlineHelpText>
        <label>Show List Price on Quote/Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__MultiCurrencyEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multi-Currency Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__OnlineConfirmationTextandTerms__c</fullName>
        <inlineHelpText>Content displayed on the Online Payment confirmation page.</inlineHelpText>
        <label>Online Order Confirmation</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>kugo2p__OnlineOrderValidInDays__c</fullName>
        <inlineHelpText>Applies to Both PDF and Online Order. 

Blank = Online Order Pages Never Expire</inlineHelpText>
        <label>Order Valid In Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__OnlinePaymentButton__c</fullName>
        <inlineHelpText>Indicates button and behavior that should be used on the online order page.</inlineHelpText>
        <label>Online Order Acceptance Button</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accept &amp; Approve</fullName>
                    <default>true</default>
                    <label>Accept &amp; Approve</label>
                </value>
                <value>
                    <fullName>Accept &amp; Pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__OnlinePaymentLogoinPDFSourceURL__c</fullName>
        <description>The source URL of Checkout Image that is displayed on Order and Invoice Documents. If Blank, a default Checkout Image is used.

Steps: 
1) Pick your desired logo image from an Online source
2) Copy/Paste the Image URL</description>
        <inlineHelpText>The source URL of Checkout Image that is displayed on Order and Invoice Documents. If Blank, a default Checkout Image is used.

Steps: 
1) Pick your desired logo image from an Online source
2) Copy/Paste the Image URL</inlineHelpText>
        <label>Checkout Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>kugo2p__PaymentMethod__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Debit/Credit Card</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__PaymentTerms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Due Upon Receipt</fullName>
                </value>
                <value>
                    <fullName>Net 7 Days</fullName>
                </value>
                <value>
                    <fullName>Net 10 Days</fullName>
                </value>
                <value>
                    <fullName>Net 30 Days</fullName>
                </value>
                <value>
                    <fullName>Net 45 Days</fullName>
                </value>
                <value>
                    <fullName>Net 60 Days</fullName>
                </value>
                <value>
                    <fullName>Net 90 Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__PreventMultipleOrdersonanInvoice__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Prevents Multiple Orders to be appended to existing Unsent Invoices of similar Account, Contact, and date parameters. If checked, related Order Number is populated on Invoice.</inlineHelpText>
        <label>Prevent Multiple Orders on an Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__PriceBookName__c</fullName>
        <description>Default Price Book for subsequent Additional Account Info (Accounts). Please use [Choose Price Book] button to change the Price Book. This field is replaced by the Price Book lookup field.</description>
        <label>Price Book Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Pricebook2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default Price Book for subsequent Additional Account Info (Accounts). Please use [Choose Price Book] button to change the Price Book.</description>
        <inlineHelpText>Default Price Book for subsequent Additional Account Info (Accounts). Please use [Choose Price Book] button to change the Price Book.</inlineHelpText>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Kugamon Settings</relationshipLabel>
        <relationshipName>Kugamon_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__PrintCompanyTextandTerms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Company Terms &amp; Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__PrintInvoiceTextandTerms__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Print Invoice Terms &amp; Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__PrintSpecificTextandTerms__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Print Quote/Order Terms &amp; Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__ProductSchedulingEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this option if product scheduling is enabled for your Salesforce.com organization.</inlineHelpText>
        <label>Product Scheduling Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__RemitToAddress__c</fullName>
        <formula>kugo2p__RemitToStreet__c &amp; BR() &amp;
  kugo2p__RemitToCity__c &amp;  &quot;,&quot; 
 &amp; kugo2p__RemitToStateProvince__c  &amp; &quot; &quot; &amp; 
  kugo2p__RemitToZipPostalCode__c  &amp; BR() 
  &amp; kugo2p__RemitToCountry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remit To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__RemitToCity__c</fullName>
        <label>Remit To City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__RemitToCountry__c</fullName>
        <label>Remit To Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__RemitToName__c</fullName>
        <label>Remit To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__RemitToStateProvince__c</fullName>
        <label>Remit To State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__RemitToStreet__c</fullName>
        <label>Remit To Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__RemitToZipPostalCode__c</fullName>
        <label>Remit To Zip/Postal Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ResetQuoteOrderTermsConditions__c</fullName>
        <label>Quote/Order Terms &amp; Conditions Reset</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Update Matched Terms</fullName>
                    <default>true</default>
                    <label>Update Matched Terms</label>
                </value>
                <value>
                    <fullName>Replace All Terms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__RestrictedBannerText__c</fullName>
        <defaultValue>&quot;NOT AUTHORIZED FOR EXTERNAL USE - SUBMIT FOR APPROVAL&quot;</defaultValue>
        <inlineHelpText>Displays on Quote, Order, and Invoice document templates, if Restricted checkbox is Checked</inlineHelpText>
        <label>Restricted Banner Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__SWIFT_Code__c</fullName>
        <label>SWIFT Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesQuoteValidOfferInDays__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Quote Valid In Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__SignatureLinestoPDF__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Displays Signature Lines on Order PDF</inlineHelpText>
        <label>Show Signature Lines on Order PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__SpecificTextandTerms__c</fullName>
        <inlineHelpText>Changes to text are automatically updated in Additional Account Info text and terms section and Quote/Order text and terms section in Draft status. If the text for Additional Account Info, Quote or Order is different, then those text will not be updated.</inlineHelpText>
        <label>Quote/Order Terms &amp; Conditions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__SupportOpportunityPrimaryContactRole__c</fullName>
        <description>If checked, Quote or Order generated from an Opportunity will use Primary Contact Role value for the selected field(s). Note: Contact Billing not present in Quotes.</description>
        <inlineHelpText>If checked, Quote or Order generated from an Opportunity will use Primary Contact Role value for the selected field(s). Note: Contact Billing not present in Quotes.</inlineHelpText>
        <label>Support Opportunity Primary Contact Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contact Buying</fullName>
                </value>
                <value>
                    <fullName>Contact Shipping</fullName>
                </value>
                <value>
                    <fullName>Contact Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__SyncPrimaryOrdertoOpportunityAmount__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Updates Opportunity Amount with Order Net Amount only if Opportunity has no Products</inlineHelpText>
        <label>Sync Primary Order to Opportunity Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__SyncPrimaryOrdertoOpportunityLines__c</fullName>
        <description>Updates Opportunity Product with Order Product and Service Lines. Order Additional Charges/Credit Lines are not Synced. Sync is one-way from Order to Opportunity.</description>
        <inlineHelpText>Updates Opportunity Product with Order Product and Service Lines. Order Additional Charges/Credit Lines are not Synced. Sync is one-way from Order to Opportunity</inlineHelpText>
        <label>Sync Primary Order to Opportunity Lines</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Order Draft</fullName>
                </value>
                <value>
                    <fullName>Order Sent</fullName>
                </value>
                <value>
                    <fullName>Order Approved</fullName>
                </value>
                <value>
                    <fullName>Order Released</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>